Fixed bug where mobile nav would overlap on-screen functions

--- a/src/components/oilersTimes/oilersTimes.css
+++ b/src/components/oilersTimes/oilersTimes.css
@@ -63,6 +63,7 @@
   border-radius: 1.2rem;
   padding: 1rem;
   transition: all 0.1s linear;
+  z-index: 100;
 }
 
 .article-button:hover {
@@ -120,6 +121,15 @@
   font-weight: 600;
   padding: 1rem;
   border-radius: 12px;
+}
+
+.author-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .article-container {
