--- a/src/components/prompt/prompt.css
+++ b/src/components/prompt/prompt.css
@@ -11,5 +11,5 @@
   background-color: #e5edff;
   backdrop-filter: blur(0.5rem);
   -webkit-backdrop-filter: blur(0.5rem);
-  z-index: 100;
+  z-index: 110;
 }
